--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-refdocs.github.io
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=http://refdocs.github.io/github-repos/">
+	
+	<title>refdocs.github.io</title>
+</head>
+</html>
